--- a/index.html
+++ b/index.html
@@ -7,39 +7,108 @@
 		<link rel="stylesheet" href="./assets/css/base.css" />
 		<link rel="stylesheet" href="./assets/css/output.css" />
 	</head>
-	<body class="">
-        <section class="welcome-page flex flex-col min-h-screen">
-            <!-- Header -->
-		<header class="flex justify-end items-center p-4">
-			<div class="text-sm font-bold hidden">LOGO</div>
-			<span class="p-2 rounded-full bg-[var(--color-toggle-bg)]">
-                <img src="./assets/images/dark_mode_icon.svg" alt="Dark Mode">
-			</span>
-		</header>
+	<body
+		class="h-full bg-[var(--color-bg-primary)] text-[var(--color-text-primary)]"
+	>
+		<!-- App Container -->
+		<div class="flex h-dvh min-h-full flex-col ">
+			<!-- Header -->
+			<header
+				class="sticky top-0 z-10 border-b border-gray-200 bg-white/80 backdrop-blur "
+			>
+				<div
+					class="mx-auto flex max-w-5xl md:max-w-7xl items-center justify-between px-4 py-3 "
+				>
+					<!-- Logo -->
+					<div class="flex items-center gap-3">
+						<div class="text-3xl lg:text-4xl logo">ConversaAI</div>
+					</div>
+					<!-- Theme toggle -->
+					<button
+						id="themeToggle"
+						type="button"
+						class="rounded-full border border-gray-300 text-sm text-gray-700 shadow-sm transition hover:bg-gray-50 cursor-pointer px-2 py-2"
+						aria-label="Toggle dark mode"
+					>
+						<!-- <img src="./assets/images/dark_mode_icon.svg" alt="Dark Mode" class="lg:w-7 lg:h-7"/> -->
+						 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#333"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"/></svg>
+					</button>
+				</div>
+			</header>
 
-		<!-- Main -->
-		<main class="flex-1 flex items-center justify-center px-4 overflow-y-auto">
-			<div class="logo text-center text-3xl md:text-6xl">ConversaAI</div>
-		</main>
+			<!-- Main Chat Area -->
+			<main class="mx-auto flex w-full max-w-5xl grow flex-col px-3 sm:px-4">
+				<!-- Spacer -->
+				<div class="h-6 sm:h-4"></div>
 
-		<!-- Footer -->
-		<footer class="p-4">
-			<form class="">
-                <div class="flex items-center relative">
-                    <textarea name="user_input" id="" placeholder="Ask Anything" class="p-4 w-full rounded-3xl border-2 text-base border-[var(--color-border)]" cols="5" rows="5">
-                       
-                    </textarea>
-				<!-- <input
-					type="text"
-					placeholder="Type a message..."
-					class="flex-1 border rounded-full px-3 py-2 text-sm focus:outline-none"
-				/> -->
-				 <span type="submit" class="absolute bottom-0 right-3 -translate-y-3  p-2 rounded-full bg-[var(--color-accent)]">
-					<img src="./assets/images/arrow_upward_white.svg" alt="Send">
-				</span>
-                </div>
-			</form>
-		</footer>
-        </section>
+				<!-- Chat container -->
+				<div
+					id="chat"
+					class="flex glow flex-col gap-6 overflow-y-auto pb-28"
+				>
+					<!-- User Message -->
+					<div class="flex justify-end">
+						<div
+							class="relative max-w-[85%] border rounded-2xl border-gray-200 px-4 py-3  text-gray-900 shadow-sm"
+						>
+							<p class="leading-relaxed text-base lg:text-lg">
+								This is an example of a user message
+							</p>
+						</div>
+					</div>
+
+					<!-- AI Message -->
+					<div class="group">
+						<div class="mx-auto flex flex-wrap max-w-3xl items-start">
+							<div
+								class="w-full rounded-t-2xl border border-gray-200 border-b-0 bg-white p-4 text-base lg:text-lg"
+							>
+								<p class="leading-relaxed">
+									This is an example AI response bubble.This is an example AI
+									response bubble.This is an example AI response bubble.This is
+									an example AI response bubble.
+								</p>
+							</div>
+							<!-- Copy button -->
+							<button
+								class="w-full items-center rounded-md px-4 py-2 text-xs text-gray-600 rounded-b-2xl rounded-t-none border border-gray-200 border-t-2xl bg-white shadow-sm cursor-pointer"
+								data-copy
+							>
+								<!-- <img src="./assets/images/copy_icon.svg" alt="Copy" /> -->
+								 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#A3A1A1"><path d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"/></svg>
+							</button>
+						</div>
+					</div>
+				</div>
+			</main>
+			<!-- Footer composer -->
+			<footer
+				class="sticky bottom-0 z-10 border-t border-gray-200 bg-white/80 backdrop-blur"
+			>
+				<div class="mx-auto max-w-3xl px-3 py-3">
+					<form id="composer" class="relative">
+						<label for="prompt" class="sr-only">Ask anything</label>
+						<div class="flex items-end gap-2">
+							<textarea
+								id="prompt"
+								name="prompt"
+								placeholder="Ask anything..."
+								class="min-h-[44px] w-full resize-y rounded-xl border border-gray-200 bg-white px-3 py-3 pr-12 text-base lg:text-lg shadow-sm outline-none placeholder:text-gray-400"
+							></textarea>
+							<button
+								id="sendBtn"
+								type="submit"
+								class="grid h-10 w-10 shrink-0 place-items-center rounded-lg bg-gray-200 shadow-sm transition hover:bg-gray-300 border border-gray-100 cursor-pointer"
+								aria-label="Send"
+							>
+								<!-- <img src="./assets/images/arrow_upward_black.svg" alt="Send" /> -->
+								 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="M440-160v-487L216-423l-56-57 320-320 320 320-56 57-224-224v487h-80Z"/></svg>
+							</button>
+						</div>
+					</form>
+				</div>
+			</footer>
+		</div>
+		
 	</body>
 </html>
