--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 		<div class="flex h-dvh min-h-full flex-col ">
 			<!-- Header -->
 			<header
-				class="sticky top-0 z-10 border-b border-gray-200 bg-white/80 backdrop-blur "
+				class="sticky top-0 z-10 border-b border-[var(--color-border)] bg-white/80 backdrop-blur "
 			>
 				<div
 					class="mx-auto flex max-w-5xl md:max-w-7xl items-center justify-between px-4 py-3 "
 				>
 					<!-- Logo -->
 					<div class="flex items-center gap-3">
-						<div class="text-3xl lg:text-4xl logo">ConversaAI</div>
+						<div class="text-3xl lg:text-4xl text-[var(--color-logo-text)] logo">ConversaAI</div>
 					</div>
 					<!-- Theme toggle -->
 					<button
 						id="themeToggle"
 						type="button"
-						class="rounded-full border border-gray-300 text-sm text-gray-700 shadow-sm transition hover:bg-gray-50 cursor-pointer px-2 py-2"
+						class="rounded-full border border-gray-300 text-sm text-[var(--color-text-primary)] shadow-sm transition hover:bg-[var(--color-accent)] cursor-pointer px-2 py-2"
 						aria-label="Toggle dark mode"
 					>
 						<!-- <img src="./assets/images/dark_mode_icon.svg" alt="Dark Mode" class="lg:w-7 lg:h-7"/> -->
@@ -49,9 +49,9 @@
 					<!-- User Message -->
 					<div class="flex justify-end">
 						<div
-							class="relative max-w-[85%] border rounded-2xl border-gray-200 px-4 py-3  text-gray-900 shadow-sm"
+							class="relative max-w-[85%] border rounded-2xl border-[var(--color-border)] px-4 py-3  text-[var(--color-text-primary)] shadow-sm"
 						>
-							<p class="leading-relaxed text-base lg:text-lg">
+							<p class="leading-relaxed text-base">
 								This is an example of a user message
 							</p>
 						</div>
@@ -61,7 +61,7 @@
 					<div class="group">
 						<div class="mx-auto flex flex-wrap max-w-3xl items-start">
 							<div
-								class="w-full rounded-t-2xl border border-gray-200 border-b-0 bg-white p-4 text-base lg:text-lg"
+								class="w-full rounded-t-2xl border border-[var(--color-border)] border-b-0 bg-white p-4 text-base text-[var(--color-text-primary)]"
 							>
 								<p class="leading-relaxed">
 									This is an example AI response bubble.This is an example AI
@@ -71,7 +71,7 @@
 							</div>
 							<!-- Copy button -->
 							<button
-								class="w-full items-center rounded-md px-4 py-2 text-xs text-gray-600 rounded-b-2xl rounded-t-none border border-gray-200 border-t-2xl bg-white shadow-sm cursor-pointer"
+								class="w-full items-center rounded-md px-4 py-2 text-xs text-gray-600 rounded-b-2xl rounded-t-none border border-[var(--color-border)] border-t-2xl bg-white shadow-sm cursor-pointer"
 								data-copy
 							>
 								<!-- <img src="./assets/images/copy_icon.svg" alt="Copy" /> -->
@@ -83,9 +83,9 @@
 			</main>
 			<!-- Footer composer -->
 			<footer
-				class="sticky bottom-0 z-10 border-t border-gray-200 bg-white/80 backdrop-blur"
+				class="sticky bottom-0 z-10 border-t border-[var(--color-border)] bg-white/80 backdrop-blur"
 			>
-				<div class="mx-auto max-w-3xl px-3 py-3">
+				<div class="mx-auto max-w-3xl px-3 lg:px-0 py-3">
 					<form id="composer" class="relative">
 						<label for="prompt" class="sr-only">Ask anything</label>
 						<div class="flex items-end gap-2">
@@ -93,22 +93,21 @@
 								id="prompt"
 								name="prompt"
 								placeholder="Ask anything..."
-								class="min-h-[44px] w-full resize-y rounded-xl border border-gray-200 bg-white px-3 py-3 pr-12 text-base lg:text-lg shadow-sm outline-none placeholder:text-gray-400"
+								class="min-h-[44px] w-full resize-y rounded-xl border border-[var(--color-border)] bg-white px-3 py-3 pr-12 text-base shadow-sm outline-none placeholder:text-[var(--color-text-secondary)]"
 							></textarea>
 							<button
 								id="sendBtn"
 								type="submit"
-								class="grid h-10 w-10 shrink-0 place-items-center rounded-lg bg-gray-200 shadow-sm transition hover:bg-gray-300 border border-gray-100 cursor-pointer"
-								aria-label="Send"
+								class="grid h-10 w-10 shrink-0 place-items-center rounded-lg shadow-sm  border border-[var(--color-border)] " 
+								aria-label="Send" disabled
 							>
 								<!-- <img src="./assets/images/arrow_upward_black.svg" alt="Send" /> -->
-								 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="M440-160v-487L216-423l-56-57 320-320 320 320-56 57-224-224v487h-80Z"/></svg>
+								 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#333"><path d="M440-160v-487L216-423l-56-57 320-320 320 320-56 57-224-224v487h-80Z"/></svg>
 							</button>
 						</div>
 					</form>
 				</div>
 			</footer>
 		</div>
-		
 	</body>
 </html>
