--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 		<link rel="stylesheet" href="./assets/css/output.css" />
 	</head>
 	<body
-		class="h-full bg-white text-black dark:bg-black dark:text-white"
+		class="h-full bg-white text-black dark:bg-black dark:text-white transition-default"
 	>
 		<!-- App Container -->
 		<div class="flex h-dvh min-h-full flex-col">
 			<!-- Header -->
 			<header
-				class="sticky top-0 border-b border-platinum dark:border-onyx"
+				class="sticky top-0 z-50 border-b border-platinum dark:border-onyx bg-white dark:bg-black"
 			>
 				<div
 					class="mx-auto flex max-w-5xl md:max-w-7xl items-center justify-between px-4 py-3 "
 				>
 					<!-- Logo -->
 					<div class="flex items-center gap-3">
-						<div class="text-2xl md:text-4xl text-black dark:text-white logo">ConversaAI</div>
+						<div class="text-2xl md:text-4xl text-black dark:text-white logo transition-default">ConversaAI</div>
 					</div>
 					<!-- Theme Switch -->
 					<button
 						id="themeSwitch"
 						type="button"
 						onclick="changeMode()"
-						class="rounded-full border border-platinum dark:border-onyx text-sm text-black dark:text-white shadow-light dark:shadow-dark-secondary transition hover:bg-black hover:dark:bg-white hover:text-white hover:dark:text-black hover:border-black  hover:dark:border-white cursor-pointer p-2"
+						class="rounded-full border border-platinum dark:border-onyx text-sm text-black dark:text-white shadow-light dark:shadow-dark-secondary hover:bg-black hover:dark:bg-white hover:text-white hover:dark:text-black hover:border-black  hover:dark:border-white cursor-pointer p-2"
 						aria-label="Theme switch button"
 					>
 						 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="#212529"  class="h-5 w-5 md:h-6 md:w-6 -rotate-30 fill-current dark:hidden"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M303.3 112.7C196.2 121.2 112 210.8 112 320C112 434.9 205.1 528 320 528C353.3 528 384.7 520.2 412.6 506.3C309.2 482.9 232 390.5 232 280C232 214.2 259.4 154.9 303.3 112.7zM64 320C64 178.6 178.6 64 320 64C339.4 64 358.4 66.2 376.7 70.3C386.6 72.5 394 80.8 395.2 90.8C396.4 100.8 391.2 110.6 382.1 115.2C321.5 145.4 280 207.9 280 280C280 381.6 362.4 464 464 464C469 464 473.9 463.8 478.8 463.4C488.9 462.6 498.4 468.2 502.6 477.5C506.8 486.8 504.6 497.6 497.3 504.6C451.3 548.8 388.8 576 320 576C178.6 576 64 461.4 64 320z"/></svg>
@@ -84,7 +84,7 @@
 			</main>
 			<!-- Footer composer -->
 			<footer
-				class="sticky bottom-0 border-t border-platinum dark:border-onyx"
+				class="sticky z-50 bottom-0 border-t border-platinum dark:border-onyx bg-white dark:bg-black"
 			>
 				<div class="mx-auto max-w-3xl px-3 lg:px-0 py-3">
 					<form id="composer" class="relative">
@@ -99,7 +99,7 @@
 							<button
 								id="sendBtn"
 								type="submit"
-								class="grid h-10 w-10 shrink-0 place-items-center rounded-full shadow-light bg-teal dark:shadow-dark-secondary border border-teal" 
+								class="grid h-10 w-10 shrink-0 place-items-center rounded-full shadow-secondary bg-teal dark:shadow-dark-secondary border border-teal" 
 								aria-label="Send" disabled
 							>
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="h-4.5 w-4.5 fill-current"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fff" d="M214.6 17.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 117.3 160 488c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>
