style: Remove extra css classes and add output.css in gitignore

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 								id="prompt"
 								name="prompt"
 								placeholder="Ask anything..."
-								class="min-h-[44px] w-full resize-y rounded-2xl border border-border-light dark:border-border-dark  p-3 pr-12 text-base outline-none placeholder:text-placeholder font-medium"
+								class="min-h-[44px] w-full resize-y rounded-2xl border border-border-light dark:border-border-dark  p-3 text-base outline-none placeholder:text-placeholder font-medium"
 							></textarea>
 							<button
 								id="sendBtn"
 								type="submit"
-								class="grid h-10 w-10 shrink-0 place-items-center rounded-full shadow-md bg-accent-600 dark:shadow-md-dark border border-accent-600" 
+								class="grid p-2 shrink-0 place-items-center rounded-full shadow-md bg-accent-600 dark:shadow-md-dark border border-accent-600" 
 								aria-label="Send" disabled
 							>
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="h-4.5 w-4.5 fill-current"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fff" d="M214.6 17.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 117.3 160 488c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>
