--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 								class="w-full rounded-t-2xl border border-border-light dark:border-border-dark border-b-0 px-4 py-3 text-base text-foreground dark:text-background"
 							>
 								<p class="leading-relaxed">
-									This is an example AI response with copy content option.
+									This is an example AI response bubble.This is an example AI
+									response bubble.This is an example AI response bubble.This is
+									an example AI response bubble.
 								</p>
 							</div>
 							<!-- Copy button -->
