--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				<!-- Chat container -->
 				<div
-					id="chat"
+					id="chatContainer"
 					class="flex glow flex-col gap-6 overflow-y-auto pb-28"
 				>
 					<!-- User Message -->
@@ -84,11 +84,11 @@
 				class="sticky z-50 bottom-0 border-t border-border-light dark:border-border-dark bg-background dark:bg-foreground"
 			>
 				<div class="mx-auto max-w-3xl px-3 lg:px-0 py-3">
-					<form id="composer" class="relative">
+					<form id="chatForm" class="relative">
 						<label for="prompt" class="sr-only">Ask anything</label>
 						<div class="flex items-end gap-2">
 							<textarea
-								id="prompt"
+								id="userInput"
 								name="prompt"
 								placeholder="Ask anything..."
 								class="min-h-[44px] w-full resize-y rounded-2xl border border-border-light dark:border-border-dark  p-3 text-base outline-none placeholder:text-placeholder font-medium"
@@ -96,10 +96,10 @@
 							<button
 								id="sendBtn"
 								type="submit"
-								class="grid p-2 shrink-0 place-items-center rounded-full shadow-md bg-accent-600 dark:shadow-md-dark border border-accent-600" 
+								class="grid p-2 shrink-0 place-items-center border send-btn-default rounded-full send-btn-default-dark" 
 								aria-label="Send" disabled
 							>
-								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="h-4.5 w-4.5 fill-current"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fff" d="M214.6 17.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 117.3 160 488c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="h-4.5 w-4.5 fill-current"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M214.6 17.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 117.3 160 488c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>
 							</button>
 						</div>
 					</form>
