--- a/index.html
+++ b/index.html
@@ -16,23 +16,46 @@
 				class="sticky top-0 z-50 border-b border-border-light dark:border-border-dark bg-background dark:bg-foreground"
 			>
 				<div
-					class="mx-auto flex max-w-5xl md:max-w-7xl items-center justify-between px-4 py-3 "
+					class="mx-auto flex max-w-5xl md:max-w-7xl items-center justify-between px-4 py-3"
 				>
 					<!-- Logo -->
 					<div class="flex items-center gap-3">
-						<div class="text-2xl md:text-4xl text-foreground dark:text-background logo transition-default">ConversaAI</div>
+						<div
+							class="text-2xl md:text-4xl text-foreground dark:text-background logo transition-default"
+						>
+							ConversaAI
+						</div>
 					</div>
 					<!-- Theme Switch -->
 					<button
 						id="themeSwitch"
 						type="button"
-						class="rounded-full border border-border-light dark:border-border-dark text-sm text-foreground dark:text-background shadow-sm dark:shadow-md-dark hover:bg-foreground hover:dark:bg-background hover:text-background hover:dark:text-foreground hover:border-foreground  hover:dark:border-background cursor-pointer p-2"
+						class="rounded-full border border-border-light dark:border-border-dark text-sm text-foreground dark:text-background shadow-sm dark:shadow-md-dark hover:bg-foreground hover:dark:bg-background hover:text-background hover:dark:text-foreground hover:border-foreground hover:dark:border-background cursor-pointer p-2"
 						aria-label="Theme switch button"
 					>
-						 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="#212529"  class="h-5 w-5 md:h-6 md:w-6 -rotate-30 fill-current dark:hidden"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M303.3 112.7C196.2 121.2 112 210.8 112 320C112 434.9 205.1 528 320 528C353.3 528 384.7 520.2 412.6 506.3C309.2 482.9 232 390.5 232 280C232 214.2 259.4 154.9 303.3 112.7zM64 320C64 178.6 178.6 64 320 64C339.4 64 358.4 66.2 376.7 70.3C386.6 72.5 394 80.8 395.2 90.8C396.4 100.8 391.2 110.6 382.1 115.2C321.5 145.4 280 207.9 280 280C280 381.6 362.4 464 464 464C469 464 473.9 463.8 478.8 463.4C488.9 462.6 498.4 468.2 502.6 477.5C506.8 486.8 504.6 497.6 497.3 504.6C451.3 548.8 388.8 576 320 576C178.6 576 64 461.4 64 320z"/></svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 640 640"
+							fill="#212529"
+							class="h-5 w-5 md:h-6 md:w-6 -rotate-30 fill-current dark:hidden"
+						>
+							<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+							<path
+								d="M303.3 112.7C196.2 121.2 112 210.8 112 320C112 434.9 205.1 528 320 528C353.3 528 384.7 520.2 412.6 506.3C309.2 482.9 232 390.5 232 280C232 214.2 259.4 154.9 303.3 112.7zM64 320C64 178.6 178.6 64 320 64C339.4 64 358.4 66.2 376.7 70.3C386.6 72.5 394 80.8 395.2 90.8C396.4 100.8 391.2 110.6 382.1 115.2C321.5 145.4 280 207.9 280 280C280 381.6 362.4 464 464 464C469 464 473.9 463.8 478.8 463.4C488.9 462.6 498.4 468.2 502.6 477.5C506.8 486.8 504.6 497.6 497.3 504.6C451.3 548.8 388.8 576 320 576C178.6 576 64 461.4 64 320z"
+							/>
+						</svg>
 
-						 <!-- Light Mode -->
-						  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="h-5 w-5 md:h-6 md:w-6 hidden fill-current dark:inline"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M200.6-7.9c-6.7-4.4-15.1-5.2-22.5-2.2S165.4-.5 163.9 7.3L143 110.6 39.7 131.4c-7.8 1.6-14.4 7-17.4 14.3s-2.2 15.8 2.2 22.5L82.7 256 24.5 343.8c-4.4 6.7-5.2 15.1-2.2 22.5s9.6 12.8 17.4 14.3L143 401.4 163.9 504.7c1.6 7.8 7 14.4 14.3 17.4s15.8 2.2 22.5-2.2l87.8-58.2 87.8 58.2c6.7 4.4 15.1 5.2 22.5 2.2s12.8-9.6 14.3-17.4l20.9-103.2 103.2-20.9c7.8-1.6 14.4-7 17.4-14.3s2.2-15.8-2.2-22.5l-58.2-87.8 58.2-87.8c4.4-6.7 5.2-15.1 2.2-22.5s-9.6-12.8-17.4-14.3L433.8 110.6 413 7.3C411.4-.5 406-7 398.6-10.1s-15.8-2.2-22.5 2.2L288.4 50.3 200.6-7.9zM186.9 135.7l17-83.9 71.3 47.3c8 5.3 18.5 5.3 26.5 0l71.3-47.3 17 83.9c1.9 9.5 9.3 16.8 18.8 18.8l83.9 17-47.3 71.3c-5.3 8-5.3 18.5 0 26.5l47.3 71.3-83.9 17c-9.5 1.9-16.9 9.3-18.8 18.8l-17 83.9-71.3-47.3c-8-5.3-18.5-5.3-26.5 0l-71.3 47.3-17-83.9c-1.9-9.5-9.3-16.9-18.8-18.8l-83.9-17 47.3-71.3c5.3-8 5.3-18.5 0-26.5l-47.3-71.3 83.9-17c9.5-1.9 16.8-9.3 18.8-18.8zM239.6 256a48.4 48.4 0 1 1 96.8 0 48.4 48.4 0 1 1 -96.8 0zm144.8 0a96.4 96.4 0 1 0 -192.8 0 96.4 96.4 0 1 0 192.8 0z"/></svg>
+						<!-- Light Mode -->
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 576 512"
+							class="h-5 w-5 md:h-6 md:w-6 hidden fill-current dark:inline"
+						>
+							<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+							<path
+								d="M200.6-7.9c-6.7-4.4-15.1-5.2-22.5-2.2S165.4-.5 163.9 7.3L143 110.6 39.7 131.4c-7.8 1.6-14.4 7-17.4 14.3s-2.2 15.8 2.2 22.5L82.7 256 24.5 343.8c-4.4 6.7-5.2 15.1-2.2 22.5s9.6 12.8 17.4 14.3L143 401.4 163.9 504.7c1.6 7.8 7 14.4 14.3 17.4s15.8 2.2 22.5-2.2l87.8-58.2 87.8 58.2c6.7 4.4 15.1 5.2 22.5 2.2s12.8-9.6 14.3-17.4l20.9-103.2 103.2-20.9c7.8-1.6 14.4-7 17.4-14.3s2.2-15.8-2.2-22.5l-58.2-87.8 58.2-87.8c4.4-6.7 5.2-15.1 2.2-22.5s-9.6-12.8-17.4-14.3L433.8 110.6 413 7.3C411.4-.5 406-7 398.6-10.1s-15.8-2.2-22.5 2.2L288.4 50.3 200.6-7.9zM186.9 135.7l17-83.9 71.3 47.3c8 5.3 18.5 5.3 26.5 0l71.3-47.3 17 83.9c1.9 9.5 9.3 16.8 18.8 18.8l83.9 17-47.3 71.3c-5.3 8-5.3 18.5 0 26.5l47.3 71.3-83.9 17c-9.5 1.9-16.9 9.3-18.8 18.8l-17 83.9-71.3-47.3c-8-5.3-18.5-5.3-26.5 0l-71.3 47.3-17-83.9c-1.9-9.5-9.3-16.9-18.8-18.8l-83.9-17 47.3-71.3c5.3-8 5.3-18.5 0-26.5l-47.3-71.3 83.9-17c9.5-1.9 16.8-9.3 18.8-18.8zM239.6 256a48.4 48.4 0 1 1 96.8 0 48.4 48.4 0 1 1 -96.8 0zm144.8 0a96.4 96.4 0 1 0 -192.8 0 96.4 96.4 0 1 0 192.8 0z"
+							/>
+						</svg>
 					</button>
 				</div>
 			</header>
@@ -46,36 +69,44 @@
 				<div
 					id="chatContainer"
 					class="h-[calc(100vh-120px)] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden flex glow flex-col gap-6 overflow-y-auto pb-28"
-				>
-					<!-- User Message -->
-					<div id="userMessageContainer" class="flex justify-end hidden">
-						<div
-							class="relative max-w-[85%] border rounded-2xl border-border-light dark:border-border-dark px-4 py-3  text-foreground dark:text-background shadow-sm dark:shadow-sm-dark"
-						>
-							<p id="userMessage" class="leading-relaxed text-base">
-								
-							</p>
-						</div>
-					</div>
+				></div>
 
-					<!-- AI Message -->
-					<div id="aiMessageContainer" class="group hidden">
-						<div class="mx-auto flex flex-wrap max-w-3xl items-start">
-							<div class="w-full rounded-t-2xl border border-border-light dark:border-border-dark border-b-0 px-4 py-3 text-base text-foreground dark:text-background"
-							>
-								<p  id="aiMessage" class="leading-relaxed">
-								</p>
-							</div>
-							<!-- Copy button -->
-							<div
-								class="w-full items-center px-4 py-3 text-xs text-foreground dark:text-background rounded-b-2xl rounded-t-none border border-border-light dark:border-border-dark shadow-sm dark:shadow-sm-dark cursor-pointer"
-							>
-								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="h-4.5 w-4.5 fill-current"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M288 464L64 464c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l48 0 0-48-48 0c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-48-48 0 0 48c0 8.8-7.2 16-16 16zM224 304c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l224 0c8.8 0 16 7.2 16 16l0 224c0 8.8-7.2 16-16 16l-224 0zm-64-16c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64L224 0c-35.3 0-64 28.7-64 64l0 224z"/></svg>
-								 
-							</div>
+				<!-- User Message -->
+				<template id="userMessageContainer">
+					<div class="message-user flex justify-end">
+						<div
+							class="relative max-w-[85%] border rounded-2xl border-border-light dark:border-border-dark px-4 py-3 text-foreground dark:text-background shadow-sm dark:shadow-sm-dark"
+						>
+							<p id="userMessage" class="leading-relaxed text-base"></p>
 						</div>
 					</div>
-				</div>
+				</template>
+
+				<!-- AI Message -->
+				<template id="aiMessageContainer">
+					<div class="message-ai w-full mx-auto flex flex-wrap max-w-3xl items-start">
+						<div
+							class="w-full rounded-t-2xl border border-border-light dark:border-border-dark border-b-0 px-4 py-3 text-base text-foreground dark:text-background"
+						>
+							<p id="aiMessage" class="leading-relaxed"></p>
+						</div>
+						<!-- Copy button -->
+						<div
+							class="w-full items-center px-4 py-3 text-xs text-foreground dark:text-background rounded-b-2xl rounded-t-none border border-border-light dark:border-border-dark shadow-sm dark:shadow-sm-dark cursor-pointer"
+						>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 512 512"
+								class="h-4.5 w-4.5 fill-current"
+							>
+								<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+								<path
+									d="M288 464L64 464c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l48 0 0-48-48 0c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-48-48 0 0 48c0 8.8-7.2 16-16 16zM224 304c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l224 0c8.8 0 16 7.2 16 16l0 224c0 8.8-7.2 16-16 16l-224 0zm-64-16c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64L224 0c-35.3 0-64 28.7-64 64l0 224z"
+								/>
+							</svg>
+						</div>
+					</div>
+				</template>
 			</main>
 			<!-- Footer composer -->
 			<footer
@@ -89,22 +120,32 @@
 								id="userInput"
 								name="prompt"
 								placeholder="Ask anything..."
-								class="min-h-[44px] w-full resize-y rounded-2xl border border-border-light dark:border-border-dark  p-3 text-base outline-none placeholder:text-placeholder font-medium"
+								class="min-h-[44px] w-full resize-y rounded-2xl border border-border-light dark:border-border-dark p-3 text-base outline-none placeholder:text-placeholder font-medium"
 							></textarea>
 							<button
 								id="sendBtn"
 								type="submit"
-								class="grid p-2 shrink-0 place-items-center border send-btn-default rounded-full send-btn-default-dark" 
-								aria-label="Send" disabled
+								class="grid p-2 shrink-0 place-items-center border send-btn-default rounded-full send-btn-default-dark"
+								aria-label="Send"
+								disabled
 							>
-								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="h-4.5 w-4.5 fill-current"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M214.6 17.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 117.3 160 488c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 384 512"
+									class="h-4.5 w-4.5 fill-current"
+								>
+									<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+									<path
+										d="M214.6 17.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 117.3 160 488c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+									/>
+								</svg>
 							</button>
 						</div>
 					</form>
 				</div>
 			</footer>
 		</div>
-		 <!-- Scripts -->
-    <script src="./assets/js/script.js"></script>
+		<!-- Scripts -->
+		<script src="./assets/js/script.js"></script>
 	</body>
 </html>
