--- a/index.html
+++ b/index.html
@@ -84,26 +84,31 @@
 
 				<!-- AI Message -->
 				<template id="aiMessageContainer">
-					<div class="message-ai w-full mx-auto flex flex-wrap max-w-3xl items-start">
+					<div
+						class="message-ai w-full mx-auto flex flex-wrap max-w-3xl items-start"
+					>
 						<div
 							class="w-full rounded-t-2xl border border-border-light dark:border-border-dark border-b-0 px-4 py-3 text-base text-foreground dark:text-background"
 						>
-							<p id="aiMessage" class="leading-relaxed"></p>
+							<p id="aiMessage" class="ai-message leading-relaxed"></p>
 						</div>
 						<!-- Copy button -->
 						<div
-							class="w-full items-center px-4 py-3 text-xs text-foreground dark:text-background rounded-b-2xl rounded-t-none border border-border-light dark:border-border-dark shadow-sm dark:shadow-sm-dark cursor-pointer"
+							class="actions w-full items-center px-4 py-2.5 rounded-b-2xl rounded-t-none border border-border-light leading-0 dark:border-border-dark shadow-sm dark:shadow-sm-dark"
 						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								viewBox="0 0 512 512"
-								class="h-4.5 w-4.5 fill-current"
-							>
-								<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-								<path
-									d="M288 464L64 464c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l48 0 0-48-48 0c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-48-48 0 0 48c0 8.8-7.2 16-16 16zM224 304c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l224 0c8.8 0 16 7.2 16 16l0 224c0 8.8-7.2 16-16 16l-224 0zm-64-16c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64L224 0c-35.3 0-64 28.7-64 64l0 224z"
-								/>
-							</svg>
+							<button class="copy-btn text-mono-400 dark:text-background hover:text-foreground cursor-pointer rounded-sm ">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 512 512"
+									class="copy h-4 w-4 fill-current"
+								>
+									<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+									<path
+										d="M288 464L64 464c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l48 0 0-48-48 0c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-48-48 0 0 48c0 8.8-7.2 16-16 16zM224 304c-8.8 0-16-7.2-16-16l0-224c0-8.8 7.2-16 16-16l224 0c8.8 0 16 7.2 16 16l0 224c0 8.8-7.2 16-16 16l-224 0zm-64-16c0 35.3 28.7 64 64 64l224 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64L224 0c-35.3 0-64 28.7-64 64l0 224z"
+									/>
+								</svg>
+								<svg class="copied h-4 w-4 fill-current hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#212529" d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"/></svg>
+							</button>
 						</div>
 					</div>
 				</template>
