--- a/index.html
+++ b/index.html
@@ -82,8 +82,19 @@
 					</div>
 				</template>
 
+				<!-- Waiting Indicator -->
+				<template id="indicatorContainer">
+					<div
+						class="indicator-wrapper w-full mx-auto flex flex-wrap max-w-3xl items-start text-base text-mono-500 animate-pulse"
+					>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="h-5 w-5 fill-current "><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"/></svg>
+						<p class="indicator-info pl-2">Waiting for AI response...</p>
+					</div>
+				</template>
+
 				<!-- AI Message -->
 				<template id="aiMessageContainer">
+					<div class="alert-info hidden">Waiting for AI response...</div>
 					<div
 						class="message-ai w-full mx-auto flex flex-wrap max-w-3xl items-start"
 					>
