fix: mobile web issue related to the virtual keyboard

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<!-- Chat container -->
 				<div
 					id="chatContainer"
-					class="h-[calc(100vh-120px)] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden flex glow flex-col gap-6 overflow-y-auto pb-28"
+					class="h-[calc(100dvh-180px)] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden flex glow flex-col gap-6 overflow-y-auto pb-28"
 				></div>
 
 				<!-- User Message -->
