fix: mobile web issue related to the safari browser

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</header>
 
 			<!-- Main Chat Area -->
-			<main class="mx-auto flex w-full max-w-5xl grow flex-col px-3 sm:px-4">
+			<main class="h-[100dvh]  mx-auto flex w-full max-w-5xl grow flex-col px-3 sm:px-4">
 				<!-- Spacer -->
 				<div class="h-6 sm:h-4"></div>
 
