--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
 			</footer>
 		</div>
 		<!-- Scripts -->
-		<script src="./assets/js/script.js"></script>
+		<script src="./assets/js/script.js" type="module"></script>
 	</body>
 </html>
